<resources>
    <string name="app_name">My Singapore</string>
    <string name="stars">Stars</string>
    <string name="title_activity_main">Insert Island</string>
    <string name="title_activity_second">Show Island</string>
    <string name="title_activity_third">Modify Island</string>
    <string name="id">Song ID</string>
    <string name="btnShowList">Show List</string>
    <string name="btnInsert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btn5Stars">Show all islands with 5 stars</string>
    <string name="name">Name</string>
    <string name="enter_island_name_here">Enter island name here</string>
    <string name="description">Description</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="square_km">Square Km</string>
    <string name="enter_square_km">Enter square km</string>
    <string name="island_id">Island ID</string>
    <string name="textview">TextView</string>
</resources>